<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TelaManutPetActivity" >

    <LinearLayout
        android:id="@+id/barraScrollMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fundobarra" >

            <LinearLayout
                android:id="@+id/barraMenuManutCad"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="top"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btImgPeso"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:src="@drawable/btpeso" />

                <ImageView
                    android:id="@+id/separador"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/separadorfundo" />

                <ImageView
                    android:id="@+id/btcartao"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:src="@drawable/btcartao" />

                <ImageView
                    android:id="@+id/s"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/separadorfundo" />

                <ImageView
                    android:id="@+id/a1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:src="@drawable/btcartao" />
                
                
                <ImageView
                    android:id="@+id/s2"
                    android:layout_width="10dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/separadorfundo" />

                <ImageView
                    android:id="@+id/a2"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="2dp"
                    android:clickable="true"
                    android:src="@drawable/btcartao" />
                
                
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telaManutCad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/barraScrollMenu"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/lbNomePet" />

                <EditText
                    android:id="@+id/nomePet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dip"
                    android:text="@string/lbDtNascPet" />

                <EditText
                    android:id="@+id/dtNascPet"
                    android:layout_width="@dimen/campoData"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="5dip"
                    android:inputType="date"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dip"
                    android:text="@string/lbSexoPet" />

                <RadioGroup
                    android:id="@+id/rdoSexo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/M"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingRight="50sp"
                        android:text="@string/mascPet" />

                    <RadioButton
                        android:id="@+id/F"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/femePet" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dip"
                    android:text="@string/lbRacaPet" />

                <Spinner
                    android:id="@+id/spnRaca"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/alturaCampo"
                    android:layout_marginTop="5dip" >
                </Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="10dip"
                    android:text="@string/lbCorPet" />

                <Spinner
                    android:id="@+id/spnCor"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/alturaCampo"
                    android:layout_marginTop="5dip" >
                </Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="Pedigree" />

                <EditText
                    android:id="@+id/pedigree"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:maxLength="200"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="Observações" />

                <EditText
                    android:id="@+id/observPet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:maxLength="500"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="Falecido?" />
                
                <RadioGroup
                    android:id="@+id/rdoFalecido"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/morto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:paddingRight="50sp"
                        android:text="Sim" />

                    <RadioButton
                        android:id="@+id/vivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Não" />
                </RadioGroup> 

                    <Button
                        android:id="@+id/btnAlterar"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:layout_marginTop="5dip"
                        android:layout_marginBottom="5dip"
                        android:layout_weight="1"
                        android:background="@drawable/buttoncinza"
                        android:text="Alterar Dados"
                        android:textColor="@drawable/buttoncinza"
                        android:textSize="@dimen/text_size_controles" >
                
                </Button>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>